apps/base/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false

      nodeSelector:
        kubernetes.io/hostname: hp-8200

      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:2.6.5
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9696
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
          startupProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
