apps/base/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9696
      targetPort: http
      protocol: TCP
