apps/base/prowlarr/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prowlarr
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 9696
          protocol: TCP
  egress:
    - {}
